2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am:
	* bindings/python/Makefile.am:
	* Makefile.am: Fix distcheck

2006-06-21  Ross Burton  <ross@openedhand.com>

	* clutter/Makefile.am:
	* examples/Makefile.am:
	Fix dist.

2006-06-20  Matthew Allum  <mallum@openedhand.com>

	* TODO:
	Update.
	* clutter/clutter-group.c:
	Attempt better group sizing code. 
	* clutter/clutter-label.c:
	Minor tweaks. 
	* clutter/clutter-texture.c:
	More debug info, make sure texture is realised for base_size()
	* clutter/clutter-video-texture.c: 
	Seeking fixes
	* examples/test.c: (main):
	Populate with more randomness.

2006-06-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	Add clutter_stage_set_xwindow_foreign() call
	* clutter/clutter-util.c:
	* clutter/clutter-util.h:
	Add some X error traps
	* examples/super-oh.c:
	Toy with us of new clutter_stage_set_xwindow_foreign() for
	optional screensaver functionality.

2006-06-14  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Add checks for GL/gl.h and GL/glx.h

2006-06-14  Matthew Allum  <mallum@openedhand.com>

	* AUTHORS:
	* README:
	* TODO:
	Update all.

2006-06-13  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-video-texture.c:
	Add missing license.

2006-06-13  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-clone-texture.h:
	* clutter/clutter-element.c:
	* clutter/clutter-element.h:
	* clutter/clutter-group.c:
	* clutter/clutter-group.h:
	* clutter/clutter-label.c:
	* clutter/clutter-label.h:
	* clutter/clutter-main.c:
	* clutter/clutter-main.h:
	* clutter/clutter-rectangle.c:
	* clutter/clutter-rectangle.h:
	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/clutter-texture.c:
	* clutter/clutter-texture.h:
	* clutter/clutter-video-texture.c:
	* clutter/clutter-video-texture.h: