@@ -1,3 +1,9 @@
+2006-06-21  Ross Burton  <ross@openedhand.com>
+
+	* Makefile.am:
+	* gtk/Makefile.am:
+	Add gtk widget to distcheck and fix.
+
 2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* clutter/Makefile.am:
